# PoloDB

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  README_CN.md
bindings/c/polodb/: CMakeLists.txt
polodb.js/: .gitignore  .npmignore  CMakeLists.txt  README.md  db.c  index.js  package-lock.json  package.json  pnpm-lock.yaml  polodb.h  polodb_addon.c  rollup.config.js  test.js  tsconfig.json  typeName.js  utils.c  utils.h
polodb.js/headers/: polodb.h
polodb.js/scripts/: download-lib.js
polodb.js/src/: client.ts  colleciton.ts  common.ts  encoding.ts  index.ts  sharedState.ts  transactionType.ts
polodb.js/test/: test.js  transaction.js  update.js
polodb.js/tests/: client.test.js  testUtils.js  transaction.test.js  update.test.js
py-polodb/: Cargo.toml  Makefile  README.md  pyproject.toml
py-polodb/polodb/: __init__.py  core.py
py-polodb/src/: doc_bson_to_py_translator.rs  helper_type_translator.rs  lib.rs  py_database.rs
py-polodb/tests/: conftest.py  test_database.py
src/polodb/: Cargo.toml  app_context.rs  bson_util.rs  checked.rs  conn_context.rs  dumper.rs  ipc.rs  main.rs  msg_ty.rs  reply.rs  server.rs  session_context.rs  sync_read_ext.rs  utils.rs
src/polodb/compression/: decompress.rs  mod.rs
src/polodb/handlers/: abort_transaction.rs  aggregate_handler.rs  commit_transaction.rs  delete_handler.rs  find_handler.rs  get_more_handler.rs  hello_handler.rs  insert_handler.rs  kill_cursors_handler.rs  mod.rs  ping_handler.rs  update_handler.rs
src/polodb/src/: main.rs
src/polodb/wire/: header.rs  message.rs  mod.rs  util.rs
src/polodb_bson/: Cargo.toml  array.rs  datetime.rs  document.rs  error.rs  hex.rs  lib.rs  macros.rs  object_id.rs  value.rs  vli.rs
src/polodb_bson/linked_hash_map/: heap_size.rs  mod.rs
src/polodb_cli/: Cargo.toml
src/polodb_cli/src/: dumper.rs  main.rs
src/polodb_clib/: Cargo.toml  lib.rs
src/polodb_core/: Cargo.toml  README.md  backend.rs  bson_utils.rs  btree.rs  collection_info.rs  commands.rs  config.rs  context.rs  crc64.rs  cursor.rs  data_ticket.rs  db.rs  db_handle.rs  doc_serializer.rs  dump.rs  error.rs  errors.rs  file_lock.rs  find.rs  idb-adapter.js  index_ctx.rs  journal.rs  lib.rs  macros.rs  meta_doc_helper.rs  migration.rs  msg_ty.rs  options.rs  overflow_data.rs  page.rs  page_handler.rs  pagecache.rs  results.rs  test_utils.rs  transaction.rs  vli.rs  vm_code.rs
src/polodb_core/action/: aggregate.rs  find.rs  mod.rs
src/polodb_core/backend/: backend.rs  mod.rs
src/polodb_core/backend/file/: file_backend.rs  file_lock.rs  frame_header.rs  journal_manager.rs  mod.rs  pagecache.rs  transaction_state.rs
src/polodb_core/backend/indexeddb/: indexeddb_backend.rs  mod.rs
src/polodb_core/backend/journal/: journal_backend.rs  journal_manager.rs  mod.rs  page_handler.rs  pagecache.rs  transaction_state.rs
src/polodb_core/backend/memory/: db_snapshot.rs  memory_backend.rs  memory_journal.rs  mod.rs
src/polodb_core/bson/: array.rs  document.rs  hex.rs  mod.rs  object_id.rs  value.rs
src/polodb_core/bson/linked_hash_map/: mod.rs
src/polodb_core/btree/: btree.rs  btree_v2.rs  counter_helper.rs  delete_all_helper.rs  delete_wrapper.rs  insert_wrapper.rs  mod.rs  vli.rs  wrapper_base.rs
src/polodb_core/coll/: collection.rs  collection_info.rs  mod.rs  txn_collection.rs
src/polodb_core/data_structures/: mod.rs  trans_map.rs
src/polodb_core/db/: backend.rs  client_cursor.rs  collection.rs  context.rs  db.rs  db_handle.rs  db_inner.rs  index_helper.rs  mod.rs  rocksdb_iterator.rs  rocksdb_options.rs  rocksdb_transaction.rs  rocksdb_wrapper.rs  server.rs
src/polodb_core/index/: index_builder.rs  index_helper.rs  index_model.rs  mod.rs
src/polodb_core/journal/: frame_header.rs  journal.rs  mod.rs  salt.rs  shared_state.rs  transaction.rs
src/polodb_core/lsm/: kv_cursor.rs  lsm_kv.rs  lsm_metrics.rs  lsm_segment.rs  lsm_session.rs  lsm_snapshot.rs  mem_table.rs  mod.rs  multi_cursor.rs
src/polodb_core/lsm/lsm_backend/: file_lock.rs  file_writer.rs  indexeddb_backend.rs  lsm_backend.rs  lsm_file_backend.rs  lsm_file_log.rs  lsm_log.rs  lsm_meta.rs  mod.rs  snapshot_reader.rs
src/polodb_core/lsm/lsm_snapshot/: lsm_meta.rs  lsm_snapshot.rs  mod.rs
src/polodb_core/lsm/lsm_tree/: lsm_tree.rs  mod.rs  tree_cursor.rs  value_marker.rs
src/polodb_core/lsm/multi_cursor/: cursor_repr.rs  mod.rs  multi_cursor.rs
src/polodb_core/metrics/: metrics.rs  mod.rs
src/polodb_core/page/: data_allocator_wrapper.rs  data_page_wrapper.rs  data_store_manager.rs  free_list_data_wrapper.rs  header_page_utils.rs  header_page_wrapper.rs  large_data_page_wrapper.rs  mod.rs  overflow_page_wrapper.rs  page.rs  page_handler.rs  pagecache.rs
src/polodb_core/page_handler/: data_page_allocator.rs  mod.rs  page_handler.rs  pagecache.rs
src/polodb_core/session/: base_session.rs  client_session.rs  dynamic_session.rs  mod.rs  page_handler.rs  pagecache.rs  session.rs  session_inner.rs
src/polodb_core/tests/: test_aggregate.rs  test_all.rs  test_collection.rs  test_db.rs  test_delete.rs  test_find.rs  test_in.rs  test_index.rs  test_insert.rs  test_kv.rs  test_regex.rs  test_session.rs  test_update.rs
src/polodb_core/tests/common/: mod.rs
src/polodb_core/tests/dataset/: CrimeDataFrom2020.csv
src/polodb_core/transaction/: mod.rs  transaction.rs  transaction_inner.rs
src/polodb_core/utils/: bson.rs  file_lock.rs  mod.rs  str.rs  vli.rs
src/polodb_core/vm/: aggregation_codegen_context.rs  annotation.rs  bytecode_builder.rs  codegen.rs  global_variable.rs  label.rs  mod.rs  op.rs  optimization.rs  query_matcher.rs  subprogram.rs  vli.rs  vm.rs  vm_add_fields.rs  vm_code.rs  vm_count.rs  vm_external_func.rs  vm_group.rs  vm_limit.rs  vm_skip.rs  vm_sort.rs  vm_unset.rs
src/polodb_core/vm/operators/: abs_operator.rs  mod.rs  op_registry.rs  sum_operator.rs
src/polodb_core/vm/update_operators/: document_path.rs  inc_operator.rs  max_operator.rs  min_operator.rs  mod.rs  mul_operator.rs  (+5 more)
src/polodb_line_diff/: Cargo.toml  lib.rs  line.rs
(+86 files in other folders)
