[project]
name = "polodb"
version = "0.1.0"
description = "Python bindings for the embedded PoloDB document database"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "SENHAJI RHAZI Hamza", email = "hamza.senhajirhazi@gmail.com" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "polodb"
version = "0.1.0"
description = ""
authors = ["SENHAJI RHAZI Hamza <hamza.senhajirhazi@gmail.com>"]
readme = "README.md"
packages = [{ include = "polodb" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^9.0.3"
flake8 = "^7.1.1"
black = "^26.3.1"
ipdb = "^0.13.13"


[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "polodb.rust_polodb"

[tool.poetry.scripts]
build-rust = "maturin develop"
