[package]
name = "polodb"
version = "5.0.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polodb"
path = "main.rs"

[dependencies]
polodb_core = { path = "../polodb_core" }
tokio = { version = "1.39.2", features = ["full"] }
byteorder = "1.4.3"
clap = "4.3.2"
chrono = "0.4"
thiserror = "1.0.40"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase", "fileapi", "namedpipeapi"] }
