[package]
name = "polodb"
version = "5.0.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polodb"
path = "main.rs"

[dependencies]
polodb_core = { path = "../polodb_core" }
tokio = { version = "1.39.2", features = ["full"] }
clap = "4.5.15"
chrono = "0.4"
anyhow = "1.0.86"
