[package]
name = "polodb"
version = "5.1.3"
authors = ["Vincent Chan <okcdz@diverse.space>"]
repository = "https://github.com/PoloDB/PoloDB"
description = "The server of PoloDB, compatible with MongoDB"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polodb"
path = "main.rs"

[features]
default = []

zstd-compression = ["dep:zstd"]
zlib-compression = ["dep:flate2"]
snappy-compression = ["dep:snap"]

[dependencies]
polodb_core = { path = "../polodb_core", version="5.1.2" }
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
clap = "4.5.15"
chrono = "0.4"
anyhow = "1.0.86"
bson = "2.11.0"
bitflags = "2.6.0"
serde = { version = "1.0.207", features = ["rc"] }
serde_json = "1.0.124"
futures = "0.3.30"

snap = { version = "1.0.5", optional = true }
zstd = { version = "0.11.2", optional = true }
flate2 = { version = "1.0", optional = true }

log = "0.4.22"
env_logger = "0.11.5"
async-trait = "0.1.81"

[dev-dependencies]
mongodb = { version = "3.0.0", features = ["tracing-unstable"] }
