[package]
name = "polodb_bson"
version = "0.11.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/vincentdchan/PoloDB"
description = "BSON lib for PoloDB"

[lib]
name="polodb_bson"
path="lib.rs"

[dependencies]
rmp = "0.8.10"
getrandom = "0.2.3"
hashbrown = "0.11.2"
