[package]
name = "polodb-cli"
version = "0.1.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polodb_core = { path = "../polodb_core" }
rustyline = "6.2.0"
quick-js = "0.3.4"
clap = "2.33.2"
