[package]
name = "polodb_clib"
version = "0.11.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
edition = "2018"

[lib]
name="polodb_clib"
path="lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
polodb_core = { path = "../polodb_core" }
polodb_bson = { path = "../polodb_bson" }
#polodb_bson = "0.10.4"
