[package]
name = "polodb_clib"
version = "3.5.1"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "MPL-2.0"
edition = "2018"

[lib]
name="polodb_clib"
path="lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
polodb_core = { path = "../polodb_core" }
threadpool = "1.8.1"
