[package]
name = "polodb_core"
version = "4.0.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "MPL-2.0"
edition = "2018"
repository = "https://github.com/PoloDB/PoloDB"
description = "An embedded document database"
keywords = ["database", "embedded", "cross-platform"]

[lib]
name="polodb_core"
path="lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lru = "0.9.0"
bson = "2.3.0"
crc64fast = "1.0"
hashbrown = "0.13.1"
getrandom = { version = "0.2.3", features = ["js"] }
byteorder = "1.4.3"
num_enum = "0.5.4"
serde = { version = "1.0.125", features = ["rc"] }
uuid = { version = "1.3.0", features = ["atomic", "v1", "v4", "wasm-bindgen", "js", "getrandom"] }
smallvec = { version = "1.10.0", features = ["union", "write", "const_new"] }
memmap2 = "0.5.10"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'Window',
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbTransaction",
]

[dev-dependencies]
polodb_line_diff = { path = "../polodb_line_diff" }
csv = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "namedpipeapi"] }
