[package]
name = "polodb_line_diff"
version = "0.1.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="polodb_line_diff"
path= "lib.rs"

[dependencies]
ansi_term = "0.12"
